ContainmentInterface: Set transient parent of submenues

The actions added by plugins or applets can contain actions that are
menues. This causes a problem for the panel because it doesn't take
focus when right clicked. Since the menues had no transientParent, they
were created as new toplevels.
BUG:417378